--- a/src/pages/Category/Category.css
+++ b/src/pages/Category/Category.css
@@ -28,9 +28,10 @@ ion-row.word-list:last-child {
 }
 
 .green-btn {
-    --background: DarkSlateGrey !important;
+    --background:linear-gradient(to bottom right,#0BB1D3, darkorchid);;
     --border-radius: 50% !important;
     width: 40px; height: 40px;
+    
 }
 
 .green-btn button {
