--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -6,12 +6,15 @@ ion-col.custom ion-router-link {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-color: DarkSlateGrey;
+    
     color: white;
     padding: 1rem;
     height: 100%;
     border-radius: 5px;
     min-height: 100px;
+    
+    background-image: linear-gradient(to bottom right,#0BB1D3, darkorchid);
+    
 }
 .custom ion-text {
     margin-top: .3rem;   
@@ -24,4 +27,8 @@ ion-col.custom ion-router-link {
     font-size: 2rem;
     margin: auto;
     display: block;
+    
+}
+.gradient-text {
+    
 }
