--- a/src/pages/Category/Category.css
+++ b/src/pages/Category/Category.css
@@ -37,7 +37,18 @@ ion-row.word-list:last-child {
     --box-shadow: none;
 }
 
-.ion-content {
-    --background: white;
-    --color: black;
+.ion-list.list-inset {
+    padding: 0;
+    margin: 0;
+    margin-top: 16px;
+}
+
+.new-conversation-input {
+    border-radius: 10px;
+}
+
+.new-conversation-btn {
+    --padding-start: 0.9em;
+    --padding-end: 0.9em;
+    --margin-inline: 0;
 }
