done favourite feature

--- a/src/pages/Play/Play.css
+++ b/src/pages/Play/Play.css
@@ -46,7 +46,8 @@ div.item p {
     justify-content: center;
 }
 
-.record-container {
+.record-container,
+.favourite-container {
     padding: .5rem 1rem;
 }
 
