Fixed login UI - fixed favorite icon on play page

--- a/src/pages/Login/index.css
+++ b/src/pages/Login/index.css
@@ -11,4 +11,13 @@
 ion-title.title-large {
     color: darkorchid;
     font-size: 36px;
+    text-align: center;
+  }
+
+  .title {
+    font-size: 36px;
+    text-align: center;
+    color: darkorchid;
+    font-style:inherit;
+
   }
